--- a/myapp/templates/includes/footer.html
+++ b/myapp/templates/includes/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <h5>Django Blog</h5>
+                <h5>Blog Writing Platform</h5>
                 <p>Sharing knowledge and inspiration through quality content.</p>
             </div>
             <div class="col-md-4">
@@ -12,21 +12,28 @@
                     {% for category in categories %}
                     <li><a href="{% url 'category_posts' category.slug %}" class="text-white">{{ category.name }}</a></li>
                     {% endfor %}
+                    <li><a href="{% url 'contact' %}" class="text-white">Contact</a></li>
                 </ul>
             </div>
             <div class="col-md-4">
-                <h5>Connect</h5>
+                <h5>Connect With Me</h5>
                 <div class="d-flex gap-3">
-                    <a href="#" class="text-white"><i class="fab fa-facebook fa-lg"></i></a>
-                    <a href="#" class="text-white"><i class="fab fa-twitter fa-lg"></i></a>
-                    <a href="#" class="text-white"><i class="fab fa-linkedin fa-lg"></i></a>
-                    <a href="#" class="text-white"><i class="fab fa-github fa-lg"></i></a>
+                    <a href="https://instagram.com/hanan_p_t_" target="_blank" class="text-white fs-4">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="https://github.com/hananpalemad" target="_blank" class="text-white fs-4">
+                        <i class="fab fa-github"></i>
+                    </a>
+                </div>
+                <div class="mt-3">
+                    <small class="text-light">Instagram: @hanan_p_t_</small><br>
+                    <small class="text-light">GitHub: hananpalemad</small>
                 </div>
             </div>
         </div>
         <hr class="my-4 bg-light">
         <div class="text-center">
-            <p>&copy; 2025 Django Blog. Built with Django and Bootstrap.</p>
+            <p>&copy; 2025 Blog Writing Platform. Built with Django and Bootstrap.</p>
         </div>
     </div>
 </footer>
